# reviewlens-mcp

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  COPYRIGHT.md  Dockerfile  README.es.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
assets/audio/: LICENSES.md  README.md
docs/: architecture.md  demo-recording.md  limitations.md  security.md
docs/adr/: 0001-read-only-mvp.md  0002-provider-service-adapter.md  0003-deterministic-mock.md
src/reviewlens_mcp/: __init__.py  config.py  errors.py  factory.py  logging_config.py  models.py  security.py  server.py  service.py  web.py
src/reviewlens_mcp/providers/: __init__.py  base.py  live.py  mock.py
src/reviewlens_mcp/static/: app.js  editorial.css  footer.css  index.html
tests/: test_contract.py  test_live_provider.py  test_logging.py  test_models.py  test_security.py  test_service.py
