[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "reviewlens-mcp"
version = "0.1.0"
description = "A secure, explainable MCP server for read-only GitHub pull request review."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Paula García Fernández" }]
dependencies = [
  "fastapi>=0.115,<1",
  "httpx>=0.27,<1",
  "mcp>=1.9,<2",
  "pydantic>=2.8,<3",
  "pydantic-settings>=2.4,<3",
  "uvicorn>=0.30,<1",
]

[project.urls]
Author = "https://github.com/pgf3712"
LinkedIn = "https://www.linkedin.com/in/paula-garcia-fernandez-pgf3712"

[project.optional-dependencies]
dev = ["mypy>=1.11", "pytest>=8.3", "pytest-asyncio>=0.24", "ruff>=0.6"]

[project.scripts]
reviewlens-mcp = "reviewlens_mcp.server:main"
reviewlens-demo = "reviewlens_mcp.web:main"

[tool.hatch.build.targets.wheel]
packages = ["src/reviewlens_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["reviewlens_mcp"]
